# gig-guide

./: .gitignore  README.md  pyproject.toml  requirements.txt
guide/: manage.py  pytest.ini
guide/comments/: forms.py  models.py  urls.py  views.py
guide/comments/migrations/: 0001_initial.py  0002_rename_body_comment_content_comment_parent_and_more.py
guide/comments/templates/comments/: comment.html
guide/core/: models.py  urls.py
guide/core/migrations/: 0001_initial.py  0002_post_updated_at.py
guide/core/templates/core/: index.html  layout.html
guide/events/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
guide/events/migrations/: 0001_initial.py  0002_event_image.py  0003_venue_event_custom_address_event_custom_city_and_more.py
guide/events/templates/events/: create.html  detail.html  list.html  post.html
guide/forum/: admin.py  forms.py  models.py  urls.py  views.py
guide/forum/migrations/: 0001_initial.py
guide/forum/templates/forum/: create.html  detail.html  list.html
guide/guide/: asgi.py  settings.py  urls.py  wsgi.py
guide/templates/: index.html  layout.html
guide/users/: forms.py  models.py  urls.py  views.py
guide/users/migrations/: 0001_initial.py  0002_profile_updated_at.py  0003_alter_profile_picture.py
guide/users/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
guide/users/templates/users/: account_detail.html  account_edit.html  login.html  (+8 more)
